--- a/ProxyLayer/appsettings.json
+++ b/ProxyLayer/appsettings.json
@@ -4,5 +4,46 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  // Changes to the fields below will require an application restart
+  "BypassRequestFilter": "false",
+
+  "AllowEmptyUserAgent": "false",
+
+  "UserAgents": {
+    "Allowed": [
+      "Firefox",
+      "Chrome",
+      "Edge",
+      "Microsoft",
+      "PostmanRuntime"
+    ],
+    "Blocked": [
+      "Googlebot"
+    ]
+  },
+
+  "Mappings": [
+    {
+      "Pattern": "/Authenticate/",
+      "Port": "6000"
+    },
+    {
+      "Pattern": "/swagger/",
+      "Port": "6001"
+    },
+    {
+      "Pattern": "/Visa/",
+      "Port": "6003"
+    },
+    {
+      "Pattern": "/swaggergen/",
+      "Port": "6003"
+    },
+    {
+      "Pattern": "/TicTacToe/",
+      "Port": "6003"
+    }
+  ]
 }
