--- a/ProxyLayer/appsettings.json
+++ b/ProxyLayer/appsettings.json
@@ -6,6 +6,8 @@
   },
   "AllowedHosts": "*",
 
+  "AcmeSettingsLocation": "../../data/acmesettings.json",
+
   // Changes to the fields below will require an application restart
   "BypassRequestFilter": "false",
 
@@ -32,6 +34,10 @@
     {
       "Pattern": "/swagger/",
       "Port": "6001"
+    },
+    {
+      "Pattern": "/Build/",
+      "Port": "5999"
     },
     {
       "Pattern": "/Visa/",
