Added Reload_Project Script to Repository. Deploy Manager to be completed later.

--- a/DeployManager/appsettings.json
+++ b/DeployManager/appsettings.json
@@ -4,5 +4,12 @@
       "Default": "None"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MonitoredProjects": [
+    {
+      "appName": "ProxyLayer",
+      "appArguments": "--port=8080",
+      "gitRepository": "git@github.com:roman015/ServerCode.git"
+    }
+  ]
 }
