Updated Mappings in appsettings.json

--- a/ProxyLayer/appsettings.json
+++ b/ProxyLayer/appsettings.json
@@ -27,29 +27,14 @@
   },
 
   "Mappings": [
-    {
-      "Pattern": "/Authenticate/",
-      "Port": "6000"
-    },
-    {
-      "Pattern": "/swagger/",
-      "Port": "6001"
-    },
+    //DeployManager
     {
       "Pattern": "/Build",
       "Port": "5999"
     },
     {
-      "Pattern": "/Visa/",
-      "Port": "6003"
-    },
-    {
-      "Pattern": "/swaggergen/",
-      "Port": "6003"
-    },
-    {
-      "Pattern": "/TicTacToe/",
-      "Port": "6003"
+      "Pattern": "/Authenticate/",
+      "Port": "6000"
     }
   ]
 }
