Added Factorio Api

--- a/ProxyLayer/appsettings.json
+++ b/ProxyLayer/appsettings.json
@@ -35,6 +35,10 @@
     {
       "Pattern": "/Authenticate/",
       "Port": "6000"
+    },
+    {
+      "Pattern": "/Factorio/",
+      "Port": "6001"
     }
   ]
 }
