--- a/ProxyLayer/appsettings.json
+++ b/ProxyLayer/appsettings.json
@@ -39,6 +39,10 @@
     {
       "Pattern": "/Factorio/",
       "Port": "6001"
+    },
+    {
+      "Pattern": "/FactorioAcolyte/",
+      "Port": "6002"
     }
   ]
 }
