Fixed typo in url Mappings

--- a/ProxyLayer/appsettings.json
+++ b/ProxyLayer/appsettings.json
@@ -41,7 +41,7 @@
       "Port": "6001"
     },
     {
-      "Pattern": "/FactorioAcolyte/",
+      "Pattern": "/FactorioAcolyte",
       "Port": "6002"
     }
   ]
