Inital Commit for 2.0

--- a/ProxyLayer/appsettings.json
+++ b/ProxyLayer/appsettings.json
@@ -1,48 +1,8 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Error"
+      "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
-
-  "AcmeSettingsLocation": "../../data/acmesettings.json",
-
-  // Changes to the fields below will require an application restart
-  "BypassRequestFilter": "false",
-
-  "AllowEmptyUserAgent": "false",
-
-  "UserAgents": {
-    "Allowed": [
-      "Firefox",
-      "Chrome",
-      "Edge",
-      "Microsoft",
-      "PostmanRuntime"
-    ],
-    "Blocked": [
-      "Googlebot"
-    ]
-  },
-
-  "Mappings": [
-    //DeployManager
-    {
-      "Pattern": "/Build",
-      "Port": "5999"
-    },
-    {
-      "Pattern": "/Authenticate/",
-      "Port": "6000"
-    },
-    {
-      "Pattern": "/Factorio/",
-      "Port": "6001"
-    },
-    {
-      "Pattern": "/FactorioAcolyte",
-      "Port": "6002"
-    }
-  ]
+  "AllowedHosts": "*"
 }
